# Tangram-Vision-Blog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
2020.11.30_OneToManySensors/: README.md  oneToManySensors.py
2021.01.21_CoordinateFrames/: CoordinateFrames.py  CoordinateFrames3D.py  README.md
2021.03.00_ColorOrNot/: Cargo.toml  README.md
2021.03.04_AnsibleVnpSetup/: README.md
2021.03.04_AnsibleVpnSetup/: README.md  playbook.yml
2021.04.12_ColorOrNot/: README.md
2021.04.12_InLivingColorOrNot/: README.md
2021.04.28_LoadingTestDataIntoPostgreSQL/: README.md  add-data-copy-csv.psql  add-data-copy-csv.sql  add-data-copy-stdin.sql  add-data-insert-ctes.sql  add-data-insert-queried-ids.sql  add-data-insert-static-ids.sql  album_genres.csv  albums.csv  artists.csv  genres.csv  schema.dbdiagram.io  schema.sql
2021.04.30_GeneratingTestDataInPostgreSQL/: Dockerfile  README.md  add-data-insert-random-function.sql  add-data-insert-random.sql  add-data-plpgsql-insert.sql  add-data-plpython-dataclasses.sql  add-data-plpython-external-pyfile.sql  add-data-plpython-faker.sql  add-data-plpython-intro.sql  add_test_data.py  requirements.txt
2021.05.28_CalibrationFromScratch/: Cargo.toml  README.md
2021.05.28_CalibrationFromScratch/src/: main.rs
2021.08.03_LensDistortions/: README.md  lens_distortions.py
2021.09.30_CalibrationStatisticsAccuracyAndPrecision/: README.md
2021.09.30_CalibrationStatisticsAccuracyVsPrecision/: README.md  linear_regression.py
2021.10.06_TerraformS3Upload/: .gitignore  README.md
2021.XX.XX_TerraformS3Upload/: README.md
(+90 files in other folders)
